Media file fixed

--- a/spas/templates/base.html
+++ b/spas/templates/base.html
@@ -6,7 +6,7 @@
 		<title>SPAS | Patrimoine & Stock</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		{% load static %}
-		<link rel="shortcut icon" href="{% static 'spas/media/logos/l1.png' %}" />
+		<link rel="shortcut icon" href="{% static 'spas/assets1/media/logos/l1.png' %}" />
 		<!--begin::Fonts-->
 		<link rel="stylesheet" href="{% static 'spas/assets1/css/fonts.css' %}" />
 		<!--end::Fonts-->
@@ -39,7 +39,7 @@
 					<div class="aside-logo flex-column-auto" id="kt_aside_logo">
 						<!--begin::Logo-->
 						<a href="{% url 'home' %}">
-							<img alt="Logo" src="{% static 'spas/media/logos/mp2.png' %}" class="h-15px logo" />
+							<img alt="Logo" src="{% static 'spas/assets1/media/logos/mp2.png' %}" class="h-15px logo" />
 						</a>
 						<!--end::Logo-->
 						<!--begin::Aside toggler-->
